# university/src/main/java/hu/webuni/university/web/CourseController.java
@@ -1,5 +1,6 @@
 package hu.webuni.university.web;
 
+import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
@@ -12,7 +13,9 @@ import org.springframework.data.querydsl.binding.QuerydslPredicate;
 import org.springframework.data.web.SortDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.server.ResponseStatusException;
 
@@ -36,7 +39,7 @@ public class CourseController implements CourseControllerApi {
 	private final CourseMapper courseMapper;
 	private final CourseRepository courseRepository;
 	private final MethodArgumentResolverHelper resolverHelper;
-	
+	private final SimpMessagingTemplate messagingTemplate;
 
 
 	@Override
@@ -94,5 +97,13 @@ public class CourseController implements CourseControllerApi {
 			return ResponseEntity.ok(courseMapper.courseSummariesToDtos(courses));
 		}
 	}
-	
+
+	@Override
+	public ResponseEntity<Void> cancelLesson(Integer courseId, @Valid LocalDate day) {
+		Course course = courseRepository.findById(courseId).orElseThrow(()-> new HttpClientErrorException(HttpStatus.NOT_FOUND));
+		messagingTemplate.convertAndSend("/topic/courseChat/" + course.getId(),
+				String.format("A %s kurzus %s napon elmarad.", course.getName(), day));
+		return ResponseEntity.ok().build();
+	}
+
 }
