# university/src/main/openapi/university-openapi.yml
@@ -207,6 +207,90 @@ paths:
       description: ''
       tags:
         - student-controller
+  /api/timetable:
+    get:
+      summary: Your GET endpoint
+      tags:
+        - time-table-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TimeTableDto'
+      operationId: get-api-timetable
+      parameters:
+        - schema:
+            type: integer
+          in: query
+          name: studentId
+        - schema:
+            type: integer
+          in: query
+          name: teacherId
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: from
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: until
+  /api/timetable/search:
+    get:
+      summary: Your GET endpoint
+      tags:
+        - time-table-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TimeTableItemDto'
+      operationId: search-time-table
+      parameters:
+        - schema:
+            type: integer
+          in: query
+          name: studentId
+        - schema:
+            type: integer
+          in: query
+          name: teacherId
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: from
+        - schema:
+            type: string
+          in: query
+          name: course
+  '/api/courses/{courseId}/cancelLesson':
+    parameters:
+      - schema:
+          type: integer
+        name: courseId
+        in: path
+        required: true
+    put:
+      summary: ''
+      operationId: cancel-lesson
+      responses:
+        '200':
+          description: OK
+      tags:
+        - course-controller
+      parameters:
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: day
 components:
   schemas:
     CourseDto:
@@ -298,3 +382,24 @@ components:
           type: boolean
         unsorted:
           type: boolean
+    TimeTableDto:
+      title: TimeTableDto
+      type: array
+      items:
+        $ref: '#/components/schemas/TimeTableItemDto'
+      description: ''
+    TimeTableItemDto:
+      title: TimeTableItemDto
+      type: object
+      properties:
+        courseName:
+          type: string
+        day:
+          type: string
+          format: date
+        startLesson:
+          type: string
+          format: time
+        endLesson:
+          type: string
+          format: time
